--- a/templates/offers.html
+++ b/templates/offers.html
@@ -194,7 +194,7 @@ function addRowToTable(color, picture_url, retailPrice, brand, averagePrice, sol
         '<td>' + (sold || '') + '</td>' +
         '<td>' + (buying_price || '') + '</td>' +
         '<td>' + (profit || '') + '</td>' + 
-        '<td><a href="' + link + '" class="btn btn-primary" target="_blank">View on ' + source + '</a></td>' +
+        '<td><a href="' + link + '" class="btn btn-primary" target="_blank">Buy on ' + source + '</a></td>' +
         '</tr>';
         table.row.add($j(row)).draw();
     });
