--- a/templates/sales_stats.html
+++ b/templates/sales_stats.html
@@ -291,7 +291,7 @@ Sales Stats
                 <td>{{ product.price.cents/100 if product.price and product.price.cents else 'N/A' }} EUR</td>
                 <td>{{ product.likes }}</td>
                 <td>{{ product.timeToSell }}</td>
-                <td><a href="{{ 'https://fr.vestiairecollective.com/' + product.link }}" class="btn btn-primary">View on VC</a></td>
+                <td><a href="{{ 'https://fr.vestiairecollective.com/' + product.link }}" class="btn btn-primary">Sell on VC</a></td>
             </tr>
             {% endfor %}
         </tbody>
