--- a/templates/sales_stats_allmodels.html
+++ b/templates/sales_stats_allmodels.html
@@ -85,7 +85,7 @@ Sales Stats
                 "data": "link",
                 "render": function(data, type, row, meta){
                     if(type === 'display'){
-                        data = '<a href="' + data + '" class="btn btn-primary">View on VC</a>';
+                        data = '<a href="' + data + '" class="btn btn-primary">Sell on VC</a>';
                     }
                     return data;
                 }
@@ -357,7 +357,7 @@ Sales Stats
                         <td>{{ product.timeToSell|default('') }}</td>
                         <td>
                             {% if product.link %}
-                                <a href="{{ 'https://fr.vestiairecollective.com/' + product.link }}" class="btn btn-primary">View on VC</a>
+                                <a href="{{ 'https://fr.vestiairecollective.com/' + product.link }}" class="btn btn-primary">Sell on VC</a>
                             {% else %}
                                 <a href="#">""</a>
                             {% endif %}
