--- a/templates/offers.html
+++ b/templates/offers.html
@@ -1,5 +1,8 @@
 
 {% extends "bootstrap/base.html" %}
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
 {% block title %}
 Price Watcher
@@ -35,7 +38,7 @@ Price Watcher
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
 
     <h1 style="text-align: center;">
         {{ brand }} {{ model }}
@@ -45,6 +48,8 @@ Price Watcher
     <div id="loading-status-vc" class="alert alert-info" role="alert" style="text-align: center;"></div>
     <div id="loading-status-original" class="alert alert-info" role="alert" style="text-align: center;"></div>
     <br><br>
+
+    <div class="table-responsive">
 
     <table id="myTable" class="table table-striped">
         <thead>
@@ -60,26 +65,46 @@ Price Watcher
             </tr>
             <tr>
                 <th></th>
-                <th><input type="text" id="title-search" placeholder="Search Title"></th>
-                <th><div id="color-search"></div></th>
-                <th><input type="number" id="average-price-min-search" placeholder="Min"> - <input type="number" id="average-price-max-search" placeholder="Max"></th>
-                <th><div id="sold-search"></div></th>
-
                 <th>
-                    <input type="number" id="buying-price-min-search" placeholder="Min"> - 
-                    <input type="number" id="buying-price-max-search" placeholder="Max">
-                </th>
-       
-                <th>
-                    <input type="number" id="profit-min-search" placeholder="Min"> - 
-                    <input type="number" id="profit-max-search" placeholder="Max">
+                    <div class="form-group">
+                        <input type="text" id="title-search" placeholder="Search Title">
+                    </div>
                 </th>
                 <th>
-                    <input type="checkbox" id="stockx-filter" value="StockX"> <span class="filter-text">StockX</span><br>
-                    <input type="checkbox" id="vc-filter" value="VC"> <span class="filter-text">VC</span><br>
-                    <input type="checkbox" id="original-filter" value="Original"> <span class="filter-text">Original</span><br>
+                    <div class="form-group" id="color-search"></div>
+                </th>
+                <th>
+                    <div class="form-group">
+                        <input type="number" id="average-price-min-search" placeholder="Min"> - 
+                        <input type="number" id="average-price-max-search" placeholder="Max">
+                    </div>
+                </th>
+                <th>
+                    <div class="form-group" id="sold-search"></div>
+                </th>
+            
+                <th>
+                    <div class="form-group">
+                        <input type="number" id="buying-price-min-search" placeholder="Min"> - 
+                        <input type="number" id="buying-price-max-search" placeholder="Max">
+                    </div>
+                </th>
+            
+                <th>
+                    <div class="form-group">
+                        <input type="number" id="profit-min-search" placeholder="Min"> - 
+                        <input type="number" id="profit-max-search" placeholder="Max">
+                    </div>
+                </th>
+                <th>
+                    <div class="form-group">
+                        <input type="checkbox" id="stockx-filter" value="StockX"> <span class="filter-text">StockX</span><br>
+                        <input type="checkbox" id="vc-filter" value="VC"> <span class="filter-text">VC</span><br>
+                        <input type="checkbox" id="original-filter" value="Original"> <span class="filter-text">Original</span><br>
+                    </div>
                 </th>
             </tr>
+            
         </thead>
         <tbody>
             <div id="loader" class="spinner-border" role="status" style="display: none;">
@@ -88,6 +113,8 @@ Price Watcher
         </tbody>
     </table>
 </div>
+</div>
+
 
 
 
