--- a/templates/sales_stats_allmodels.html
+++ b/templates/sales_stats_allmodels.html
@@ -238,7 +238,7 @@ Sales Stats
     </h1>
     <br><br>
     <div id="salesStats" class="collapse">
-        <div class="container">
+        <div class="container-fluid">
             <!-- Add this div where you want the dashboard to appear -->
             <div id="dashboard" style="height: 800px; width: 100%;"></div>
 
