--- a/templates/sales_stats.html
+++ b/templates/sales_stats.html
@@ -217,7 +217,7 @@ Sales Stats
     </h1>
     <br><br>
     <div id="salesStats" class="collapse">
-        <div class="container">
+        <div class="container-fluid">
             <!-- Add this div where you want the dashboard to appear -->
             <div id="dashboard" style="height: 1350px; width: 100%;"></div>
 
