--- a/templates/sales_stats.html
+++ b/templates/sales_stats.html
@@ -292,7 +292,7 @@ Sales Stats
                 <td>{{ product.id }}</td>
                 <td>{{ product.name }}</td>
                 <td>{{ product.colors.all[0].name if product.colors and product.colors.all and product.colors.all[0].name else 'N/A' }}</td>
-                <td>{{ product.price.cents/100 if product.price and product.price.cents else 'N/A' }} EUR</td>
+                <td>{{ (product.price.cents/100)|int if product.price and product.price.cents else 'N/A' }}€</td>
                 <td>{{ product.likes }}</td>
                 <td>{{ product.timeToSell }}</td>
                 <td><a href="{{ 'https://fr.vestiairecollective.com/' + product.link }}" class="btn btn-primary" target="_blank">Sell on VC</a></td>
