--- a/templates/sales_stats_allmodels.html
+++ b/templates/sales_stats_allmodels.html
@@ -63,24 +63,32 @@ Sales Stats
             }).get().join('|');
         }
     },
-        "columns": [
+    "columns": [
             { 
-            "data": "image",
-            "render": function(data, type, row, meta){
-                if(type === 'display'){
-                    data = '<img src="' + data + '" alt="Product Image" height="50" width="50">';
-                }
-                return data;
+                "data": "image",
+                "render": function(data, type, row, meta){
+                    if(type === 'display'){
+                        data = '<img src="' + data + '" alt="Product Image" height="50" width="50">';
+                    }
+                    return data;
+                },
+                "orderable": false, // Disable sorting for this column
+                "searchable": false // Disable searching for this column
             },
-            "orderable": false, // Disable sorting for this column
-            "searchable": false // Disable searching for this column
-        },
             { "data": "id" },
             { "data": "brand" },
             { "data": "model" },
             { "data": "name" },
             { "data": "color" },
-            { "data": "price" },
+            { 
+                "data": "price", 
+                "render": function (data, type, row) {
+                    if (type === 'display' || type === 'filter') {
+                        return parseFloat(data).toFixed(0) + '€';
+                    }
+                    return data;
+                } 
+            },
             { "data": "likes" },
             { "data": "timeToSell" },
             {
@@ -93,6 +101,7 @@ Sales Stats
                 }
             }
         ],
+
         "order": [[ 1, "desc" ]],  
         "pageLength": 50,
         "lengthMenu": [[50, 100, 200, -1], [50, 100, 200, "All"]]
@@ -354,7 +363,7 @@ Sales Stats
                         <td>{{ product.model.name|default('') if 'model' in product else '' }}</td>
                         <td>{{ product.name|default('') }}</td>
                         <td>{{ (product.colors.all[0].name if product.colors and product.colors.all and product.colors.all[0].name else '')|default('') }}</td>
-                        <td>{{ ((product.price.cents/100) if product.price and product.price.cents else '')|default('') }} EUR</td>
+                        <td>{{ ('%.0f'|format(product.price.cents/100.0) if product.price and product.price.cents else 'N/A') }}€</td>
                         <td>{{ product.likes|default('') }}</td>
                         <td>{{ product.timeToSell|default('') }}</td>
                         <td>
